--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Learning React and Redux",
   "scripts":{
     "prestart": "babel-node tools/startMessage.js",
-    "start": "babel-node tools/srcServer.js"
+    "start": "babel-node tools/srcServer.js",
+    "lint": "node_modules/.bin/esw webpack.config.* src tools"
   },
   "author": "Allan Bisnar",
   "license": "MIT",
