--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Learning React and Redux",
   "scripts":{
     "prestart": "babel-node tools/startMessage.js",
-    "start": "babel-node tools/srcServer.js",
-    "lint": "node_modules/.bin/esw webpack.config.* src tools"
+    "start": "npm-run-all --parallel open:src lint:watch",
+    "open:src": "babel-node tools/srcServer.js",
+    "lint": "node_modules/.bin/esw webpack.config.* src tools",
+    "lint:watch": "npm run lint -- --watch"
   },
   "author": "Allan Bisnar",
   "license": "MIT",
